Add secret and client_id
